myproject nov18modify

--- a/root/pages/contactus.html
+++ b/root/pages/contactus.html
@@ -64,8 +64,31 @@
      </nav>
    </header>
   <main>
+    <div class="container-fluid p-0">
+      <div class="site-content bg-success">
+        <div class="d-flex justify-content-start">
+          <div class="d-flex flex-column">
+            <h1 class="site-title">About Us</h1>
+          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
+          </div>
 
+        </div>
 
+      </div>
+   </div>
+    <!--section1-->
+    <div class="section-1">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-start">
+          <div class="d-flex flex-column m-4">
+            <h1 class="heading-1 text-danger">Company Overview</h1><!--heading-1 para-->
+            <p class="para text-secondary">Organizations need individuals with cloud skills to help transform their business.
+               AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloudh</p>
+           </div>
+         </div>
+       </div>
+     </div>
+<!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
