--- a/root/pages/aboutus.html
+++ b/root/pages/aboutus.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo aboutus page</title>
+
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <<link rel="stylesheet" href="../css/aboutus.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
   </head>
   <body>
    <header>
@@ -104,12 +105,197 @@
        </div>
      </div>
    </div>
-  <!--section2-->
-  <div class="section-2">
-    <div class="">
+   <!--section2-->
+    <div class="section2 bg-light">
+      <div class="container-fluid">
 
+         <div class="row founder">
+           <div class="col-sm-7">
+             <h1 class="text-center heading">Meet our Founder, President & CEO</h1>
+             <p>Bansal holds a master’s degree in Business Administration, an undergraduate degree in Business & Accounting
+                and multiple technology certifications. Additionally, he and his company have won many awards by local and
+                 national organizations.Bansal believes in giving back to the community. As a volunteer, he is actively involved
+                  working for multiple education, business & civic organizations. Some of his major public service experience / involvement
+                   other than running for office </p>
+             <p>Technologies is dedicated to maintaining and improving your information technology
+                system’s productivity and efficiency, and providing you with quality, flexibility and security.
+                 Our client centric focus and services are designed to help you with your business needs and maximize
+                 your operational performance.  We are here to help you, anytime and anywhere.Technologies is also bringing the same
+                  level IT experience available to fortune companies to the local Small and Medium Businesses under the brand MyTecq.com.</p>
+           </div>
+           <div class="col-sm-5">
+             <div class="img-wrap">
+               <img src="../images/pexels-andrea-piacquadio-1843360.jpg" alt="">
+             </div>
+           </div>
+         </div>
+      </div>
+    </div>
+  <!--section3-->
+  <section class="team">
+    <div class="container">
+      <h1 class="teamh1">Our team</h1>
+      <div class="row">
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>kumar</h2>
+          <h3>Founder/CEO</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Santhosh</h2>
+          <h3>Marketing head</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Akshay</h2>
+          <h3>Sales head</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Aryav</h2>
+          <h3>founder/ceo</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Sandeep</h2>
+          <h3>Founder/CEO</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Varun</h2>
+          <h3>Marketing head</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Rithik</h2>
+          <h3>Sales head</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
+        </div>
+        <div class="col-md-3 profile text-center">
+          <div class="img-box">
+            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+              <ul>
+                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
+              </ul>
+          </div>
+          <h2>Ajith</h2>
+          <h3>founder/ceo</h3>
+          <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--  <div class="colored-section" id="testimonials">
+
+      <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="hover">
+        <div class="carousel-inner">
+          <div class="carousel-item active container-fluid">
+                <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+                <img class="testimonial-image" src="../images/pexels-rebrand-cities-1367271.jpg" alt="dog-profile">
+          </div>
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <img class="testimonial-image" src="../images/pexels-rebrand-cities-1367271.jpg" alt="lady-profile">
+            <em>Beverly, Illinois</em>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+
+    </div>-->
+<!--section4-->
+<!--<div class="container section4">
+  <h1 class="icons">Our Parterns</h1>
+  <div class="row">
+    <div class="col-lg-2">
+      <h1>hi</h1>
+    </div>
+    <div class="col-lg-2">
+      <h1>hi</h1>
+    </div>
+    <div class="col-lg-2">
+      <h1>hi</h1>
+    </div>
+    <div class="col-lg-2">
+      <h1>hi</h1>
+    </div>
+    <div class="col-lg-2">
+      <h1>hi</h1>
+    </div>
+    <div class="col-lg-2">
+      <h1>hi</h1>
     </div>
   </div>
+</div>-->
+
   <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
