--- a/root/pages/careers.html
+++ b/root/pages/careers.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
              <a href="careers.html" class="nav-link">Carrers</a>
           </li>
           <li class="nav-item">
@@ -64,8 +64,59 @@
      </nav>
    </header>
   <main>
+    <div class="container-fluid p-0 background">
+      <div class="site-content transbox">
+        <div class="d-flex justify-content-left">
+          <div class="d-flex flex-column">
+            <!--<h1 class="site-title text-success">Our Services</h1>
+          <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>
+            <p class="site-desc">The speed of change is throwing traditional business methods into question and disrupting the relevance of entire industries.</p>-->
+          </div>
 
+        </div>
 
+      </div>
+   </div>
+   <!--section2-->
+   <div class="section-2">
+     <div class="container-fluid">
+       <div class="d-flex justify-content-start">
+         <div class="d-flex flex-column m-4">
+           <h1 class="heading-1">Careers</h1>
+           <h3>What We Do..</h3><!--heading-1 para-->
+           <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
+             Organizations need individuals with cloud skills to help transform their business.
+              Our content is built by experts at fifo and updated regularly to keep pace with fifo updates, so you
+              can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
+                  Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
+                 Our content is built by experts at AWS and updated regularly to keep pace with updates, so you
+                 can be sure you’re learning the latest and keeping your cloud skills fresh.<br><br>
+               We offer both digital and classroom training. Digital training allows you to learn online at your own pace. With classroom training,
+                  learn best practices from an expert instructor. In addition to in-person classes, virtual training lets you take courses from anywhere. Whether you are just
+                  starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training and Certification can help you be more effective and do more in the cloud.</p>
+              <h3>IT & other positions</h3>
+              <p class="para text-secondary">Are you ready to make a career change in a rapidly growing industry? We are always looking
+                 for top talent to join the fifo team! New opportunities emerge each day with our IT Professional Services
+                 and IT Solutions Division, as well as other departments.Develop and deploy your applications to the cloud with the help
+                 of industry-leading consulting team. Whether you have a collection of existing applications or on the lookout
+                  to implement your first, our team can architect the ultimate solution with the reliability and scaling capabilities of
+                  new Cloud Native technologies.</p>
+                  <h5>Ready to explore a career from FifoSolutions? Just click on the below button to register as a job seeker..</h5>
+                  <form class="form-inline" action="trainingreg.html" method="post">
+                      <button class="btn bg-success" type="submit">Register now</button>
+                   </form>
+                <h4><a class="anchor" href="">Click here to see the job opportunities.</a></h4>
+                <h1 class="heading-1">Benifits</h1>
+                <h3>We care about our consultants</h3>
+                <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
+                  Organizations need individuals with cloud skills to help transform their business.</p>
+                <h3>Equal Employment Opportunity</h3>
+                <p class="para text-secondary">We will provide job, training  all terms and conditions of consultant without regard to their race, color, religion, national origin, gender identity, age, protected veteran status, disability, or other protected categories under the applicable law.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
