--- a/root/pages/training.html
+++ b/root/pages/training.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -56,8 +56,8 @@
              <a href="contactus.html" class="nav-link">Contact us</a>
           </li>
         </ul>
-      <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employee login
+      <form class="form-inline my-2 my-lg-0" action="traininglogin.html" method="post">
+          <button class="btn menu-right-btn border mx-4" type="submit">Training login
             </button>
        </form>
       </div>
@@ -93,7 +93,10 @@
             We offer both digital and classroom training. Digital training allows you to learn online at your own pace. With classroom training,
                learn best practices from an expert instructor. In addition to in-person classes, virtual training lets you take courses from anywhere. Whether you are just
                starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training and Certification can help you be more effective and do more in the cloud.</p>
-             <input type="button" value="Register now" class="btn btn-danger">
+               <form class="form-inline" action="trainingreg.html" method="post">
+                   <button class="btn bg-danger" type="submit">Register now</button>
+                </form>
+
        </div>
      </div>
    </div>
