--- a/root/pages/aboutus.html
+++ b/root/pages/aboutus.html
@@ -100,11 +100,18 @@
                        AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
                        Our content is built by experts at AWS and updated regularly to keep pace with AWS updates, so you
                        can be sure you’re learning the latest and keeping your cloud skills fresh</p>
+              <h2 class="values">Our Values</h2><br>
+              <p class="para text-secondary"><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
+              <p class="para text-secondary"><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
          </div>
+
        </div>
      </div>
    </div>
+   <!--section-->
+
    <!--section2-->
     <div class="section2 bg-light">
       <div class="container-fluid">
@@ -137,53 +144,53 @@
       <h1 class="teamh1">Our team</h1>
       <div class="row">
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>kumar</h2>
           <h3>Founder/CEO</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Santhosh</h2>
           <h3>Marketing head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Akshay</h2>
           <h3>Sales head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Aryav</h2>
           <h3>founder/ceo</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
@@ -194,53 +201,53 @@
 
       <div class="row">
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Sandeep</h2>
           <h3>Founder/CEO</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+           <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Varun</h2>
           <h3>Marketing head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Rithik</h2>
           <h3>Sales head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <div class="img-box">
-            <img src="./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
+          <!--<div class="img-box">
+            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
               <ul>
                  <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                  <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                  <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
               </ul>
-          </div>
+          </div>-->
           <h2>Ajith</h2>
           <h3>founder/ceo</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
@@ -248,54 +255,27 @@
       </div>
     </div>
   </section>
-  <!--  <div class="colored-section" id="testimonials">
-
-      <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="hover">
-        <div class="carousel-inner">
-          <div class="carousel-item active container-fluid">
-                <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-                <img class="testimonial-image" src="../images/pexels-rebrand-cities-1367271.jpg" alt="dog-profile">
-          </div>
-          <div class="carousel-item container-fluid">
-            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-            <img class="testimonial-image" src="../images/pexels-rebrand-cities-1367271.jpg" alt="lady-profile">
-            <em>Beverly, Illinois</em>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-        </a>
-      </div>
-
-    </div>-->
-<!--section4-->
-<!--<div class="container section4">
-  <h1 class="icons">Our Parterns</h1>
-  <div class="row">
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
-    <div class="col-lg-2">
-      <h1>hi</h1>
-    </div>
+<!--section-->
+<div class="bg-light container-fluid">
+  <div class="partners">
+     <h2 class="text-center">Our valued partners</h2>
   </div>
-</div>-->
 
+  <div class="row">
+
+  <div class="awslogo col">
+   <div class="icon">
+     <i class="fab fa-aws"><span id="span1">partner network</span> <span id="span2"><br>Advanced</span><span id="span3"><br>Consulting</span><span id="span4"><br>Partner</span></i>
+   </div>
+  </div>
+     <i class='fab fa-docker'><span id="docker">docker</span></i>
+     <i class='fab fa-puppet'>puppet</i>
+     <i class='fab fa-CHEF'>CHEF</i>
+     <i class="fab fa-redhat"><span id="red">Red Hat</span></i>
+     <i class="fab fa-atlassian">ATLASSIAN</i>
+
+   </div>
+ </div>
   <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
