--- a/root/pages/clients.html
+++ b/root/pages/clients.html
@@ -64,8 +64,20 @@
      </nav>
    </header>
   <main>
+    <div class="container-fluid p-0">
+      <div class="site-content">
+        <div class="d-flex justify-content-start">
+          <div class="d-flex flex-column">
+            <h1 class="site-title">Our clients</h1>
+          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
+          
+          </div>
 
+        </div>
 
+      </div>
+   </div>
+<!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
