--- a/root/pages/contactus.html
+++ b/root/pages/contactus.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -52,7 +52,7 @@
           <li class="nav-item">
              <a href="aboutus.html" class="nav-link">About us</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
              <a href="contactus.html" class="nav-link">Contact us</a>
           </li>
         </ul>
@@ -64,42 +64,87 @@
      </nav>
    </header>
   <main>
-    <div class="container-fluid p-0">
-      <div class="site-content bg-success">
-        <div class="d-flex justify-content-start">
-          <div class="d-flex flex-column">
-            <h1 class="site-title">About Us</h1>
-          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
+
+<!--section-->
+<div class="container-fluid bg-light">
+ <section class="contact">
+    <div class="content">
+       <h2>contact us</h2>
+       <p>Fifosolutions is a IT services and IT consulting providing company. It was founded in 2019. It has main office as head office in Vizag, Andhra pradesh, India.</p>
+    </div>
+    <div class="container">
+       <div class="contactinfo">
+         <div class="box">
+            <div class="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+             <div class="text">
+                <h3>Working hours</h3>
+                <p>Mon-Fri:8pm to 5Am(IST)</p>
+             </div>
+         </div>
+          <div class="box">
+             <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+              <div class="text">
+                 <h3>Address</h3>
+                 <p>21 Revolution Street<br>
+                 vizag, Andhra pradesh,<br>
+                 India<br>
+                 +1 667 123456<br>
+                  P O Box: 117537</p>
+              </div>
           </div>
-
-        </div>
-
-      </div>
-   </div>
-    <!--section1-->
-    <div class="section-1">
-      <div class="container-fluid">
-        <div class="d-flex justify-content-start">
-          <div class="d-flex flex-column m-4">
-            <h1 class="heading-1 text-danger">Company Overview</h1><!--heading-1 para-->
-            <p class="para text-secondary">Organizations need individuals with cloud skills to help transform their business.
-               AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloudh</p>
-           </div>
-         </div>
+          <div class="box">
+             <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+              <div class="text">
+                 <h3>Call us/ Whatsapp</h3>
+                 <p>567575757557</p>
+              </div>
+          </div>
+          <div class="box">
+             <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+              <div class="text">
+                 <h3>Email</h3>
+                 <p>people@fifosolutions.com</p>
+              </div>
+          </div>
        </div>
-     </div>
+       <div class="contactform">
+          <form>
+            <h2>send message</h2>
+            <div class="inputbox">
+               <input type="text" name="" value="" placeholder="Full name" required="required">
+            </div>
+            <div class="inputbox">
+               <input type="text" name="" value="" placeholder="Email" required="required">
+
+            </div>
+            <div class="inputbox">
+               <input type="text" name="" value="" placeholder="Mobile Number" required="required">
+
+            </div>
+            <div class="inputbox">
+               <textarea name="name" required="required" placeholder="Type your message" rows="8" cols="60"></textarea>
+            </div>
+            <div class="inputbox">
+               <input type="submit" name="" value="send">
+
+            </div>
+          </form>
+       </div>
+    </div>
+</section>
+</div>
 <!--footer-->
-    <footer class="footer-distributed">
-        <div class="footer-left ">
-          <h2>Address</h2>
-          <address class="address">
-           <span>21 Revolution Street<br>
-           vizag, Andhra pradesh,<br>
-           India<br>
-           +1 667 123456<br>
-            P O Box: 117537<br></span>
-           </address>
-         </div>
+    <!--<footer class="footer-distributed">
+      <div class="footer-left ">
+        <h2>Address</h2>
+        <address class="address">
+         <span>21 Revolution Street<br>
+         vizag, Andhra pradesh,<br>
+         India<br>
+         +1 667 123456<br>
+          P O Box: 117537<br></span>
+         </address>
+       </div>
         <div class="footer-center">
          <div>
            <h2>Contact Us</h2>
@@ -121,7 +166,7 @@
          for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
           established.</p>
        </div>
-  </footer>
+  </footer>-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
