--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -57,7 +57,6 @@
           </li>
         </ul>
       <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-        <!--<a class="text-secondary" href="emplogin.html">Employee login</a>-->
           <button class="btn menu-right-btn border mx-4" type="submit">Employee login
             </button>
        </form>
@@ -65,19 +64,46 @@
      </nav>
    </header>
    <main>
-    <div class="container-fluid p-0 background">
-      <div class="site-content transbox">
-        <div class="d-flex justify-content-center">
-          <div class="d-flex flex-column">
-            <h1 class="site-title text-success">Welcome to FifoSolutions</h1>
-          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
-            <p class="site-desc">Here you can turn your passion into your career</p>
-          </div>
-
-        </div>
-
-      </div>
-   </div>
+    <!-- slider section -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
+   			  <ol class="carousel-indicators">
+   			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+   			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+   			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+   			  </ol>
+   			  <div class="carousel-inner">
+   			    <div class="carousel-item active">
+   			    	<div class="info">
+   			      		<h1>Welcome to Fifosolutions</h1>
+   			      		<p>Here you can turn your passion into your career.</p>
+   			      	</div>
+   			    </div>
+   			    <div class="carousel-item">
+   			    	<div class="info">
+   			      		<h1>100% Job guarantee.</h1>
+   			      		<p>Best jobs are available here.</p>
+   			      	</div>
+   			    </div>
+   			    <div class="carousel-item">
+   			    	<div class="info">
+   			      		<h1>Here you can get training.</h1>
+   			      		<p>If you are new to technology, we will provide training.</p>
+   			      	</div>
+   			    </div>
+   			  </div>
+   			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+   			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   			    <span class="sr-only">Previous</span>
+   			  </a>
+   			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+   			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+   			    <span class="sr-only">Next</span>
+   			  </a>
+   			</div>
+   		</div>
+   	</div>
+    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <!--section1-->
   <div class="section-1">
       <div class="container text-center">
         <h1 class="heading-1">How it works?</h1>
@@ -115,19 +141,20 @@
           </div>
         </div>
       </div>
-
-    </div>
+  </div>
+  <!--section2-->
     <div class="section-2">
       <div class="container-fluid">
         <div class="d-flex justify-content-end">
           <div class="d-flex flex-column m-4">
-            <h1 class="s2 heading-1 text-success">We will provide you the best training</h1><!--heading-1 para-->
+            <h1 class="s2 heading-1 text-success">We will provide you the best training</h1>
             <p class="s2 para text-secondary"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
             <input type="button" value="Join with us" class="btn btn-danger">
           </div>
         </div>
       </div>
     </div>
+  <!--section3-->
     <div class="section-3">
       <div class="container">
 
@@ -199,10 +226,9 @@
             </div>
          </div>
       </div>
-
-
-      </div>
-      </div>
+   </div>
+  </div>
+  <!--section4-->
      <div class="section-4 bg-dark">
        <div class="container">
          <div class="row">
