--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo home page</title>
+      <link rel="icon" href="../Favicon/favicon.ico">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -112,7 +113,7 @@
              <div class="card">
                <i class="fa fa-graduation-cap icon" aria-hidden="true"></i>
                <div class="card-body">
-                <a class="seclink" href="index.html">
+                <a class="seclink" href="jobseeker.html">
                  <h4 class="card-title text-dark">Job seeker</h4>
                  <p class="card-text">Wherever you desire to go, we give you the tools, the techniques, and the teams to navigate
                    the journey. So you’re inspired to build. </p></a>
@@ -149,7 +150,10 @@
           <div class="d-flex flex-column m-4">
             <h1 class="s2 heading-1 text-success">We will provide you the best training</h1>
             <p class="s2 para text-secondary"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            <input type="button" value="Join with us" class="btn btn-danger">
+            <form class="form-inline" action="trainingreg.html" method="post">
+                <!--<input type="button" value="Join with us" class="btn btn-danger">-->
+                <button class="btn bg-danger text-white" type="submit">Join with us</button>
+            </form>
           </div>
         </div>
       </div>
@@ -237,7 +241,7 @@
             </div>
             <div class="col-md-5">
               <h1 class="text-white">Do you want to get a job which fulfills your dream.</h1>
-              <a href="#">join us</a>
+              <a href="jobseekerreg.html">Join us</a>
               <p class="para-1"> It is a long established fact that a reader will be distracted by the readable content
                s of a page when looking at its layout. The point of using Lorem</p>
             </div>
