--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -82,7 +82,7 @@
    			    <div class="carousel-item">
    			    	<div class="info">
    			      		<h1>100% Job guarantee.</h1>
-   			      		<p>Best jobs are available here.</p>
+   			      		<p>Through us we will provide you the best jobs.</p>
    			      	</div>
    			    </div>
    			    <div class="carousel-item">
