--- a/root/pages/clients.html
+++ b/root/pages/clients.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -35,17 +35,18 @@
             </div>
 
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="jobseeker.html" class="nav-link">Job seeker</a>
+          <!--  <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Job Seeker
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="jobseekerreg.html">Register</a>
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>
+            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -78,6 +79,58 @@
 
       </div>
    </div>
+<!--section1-->
+<div class="section-1">
+    <div class="container justify-content-left">
+      <h1 class="heading-1 text-danger">Pleasure to work with</h1>
+      <div class="row justify-content-left text-center">
+        <div class="col-md-3">
+           <div class="card">
+             <img class="image" src="../images/flaticons/apple.png" alt="">
+
+             <div class="card-body">
+              <a class="seclink" href="jobseeker.html">
+               <h4 class="card-title text-dark">Apple</h4>
+              <!-- <p class="card-text">Wherever you desire to go, we give you the tools, the techniques, and the teams to navigate
+                 the journey. So you’re inspired to build. </p></a>-->
+             </div>
+         </div>
+        </div>
+        <div class="col-md-3">
+           <div class="card">
+             <img class="image" src="../images/flaticons/google.png" alt="">
+
+             <div class="card-body">
+              <a class="seclink" href="jobseeker.html">
+               <h4 class="card-title text-dark">Google</h4>
+              <!-- <p class="card-text">Wherever you desire to go, we give you the tools, the techniques, and the teams to navigate
+                 the journey. So you’re inspired to build. </p></a>-->
+             </div>
+         </div>
+        </div>
+        <!--<div class="col-md-4">
+          <div class="card">
+            <i class="fa fa-users icon" aria-hidden="true"></i>
+            <div class="card-body">
+              <a class="seclink" href="index.html">
+              <h4 class="card-title text-dark">Bench sales</h4>
+              <p class="card-text">We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today  </p></a>
+            </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <i class="fa fa-user-circle-o icon" aria-hidden="true"></i>
+            <div class="card-body">
+              <a class="seclink" href="index.html">
+              <h4 class="card-title text-dark">Technical recruiter</h4>
+              <p class="card-text">It was observed that there has been an increase in recruitment fraud involving scammers who post fraudulent jobs openings. </p></a>
+            </div>
+        </div>
+      </div>-->
+      </div>
+    </div>
+</div>
 <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
