--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -26,7 +26,7 @@
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Services
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -58,7 +58,7 @@
           </li>
         </ul>
       <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employee login
+          <button class="btn menu-right-btn border mx-4" type="submit">Employer login
             </button>
        </form>
       </div>
@@ -125,7 +125,7 @@
               <i class="fa fa-users icon" aria-hidden="true"></i>
               <div class="card-body">
                 <a class="seclink" href="index.html">
-                <h4 class="card-title text-dark">Bench sales recruiter</h4>
+                <h4 class="card-title text-dark">Bench sales</h4>
                 <p class="card-text">We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today  </p></a>
               </div>
           </div>
@@ -135,7 +135,7 @@
               <i class="fa fa-user-circle-o icon" aria-hidden="true"></i>
               <div class="card-body">
                 <a class="seclink" href="index.html">
-                <h4 class="card-title text-dark">Employer</h4>
+                <h4 class="card-title text-dark">Technical recruiter</h4>
                 <p class="card-text">It was observed that there has been an increase in recruitment fraud involving scammers who post fraudulent jobs openings. </p></a>
               </div>
           </div>
@@ -259,6 +259,7 @@
           <input type="button" value="contact us" class="btn btn-danger px-4 py-2">
         </div>
       </div>
+  <!--footer-->
       <footer class="footer-distributed">
           <div class="footer-left">
             <h2>Address</h2>
