--- a/root/pages/empreg.html
+++ b/root/pages/empreg.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -39,13 +39,14 @@
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="jobseeker.html" class="nav-link">Job seeker</a>
+            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Job Seeker
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="jobseekerreg.html">Register</a>
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>
+            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -58,15 +59,53 @@
           </li>
         </ul>
       <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employee login
+          <button class="btn menu-right-btn border mx-4" type="submit">Employer login
             </button>
        </form>
       </div>
      </nav>
    </header>
   <main>
+  <section>
+    <div class="wrapper">
+      <h2>Employee Signup</h2>
+      <div id="error_message"></div>
+      <form id="myform" action="success.html" method="post" onsubmit="return validate()">
+        <div class="input_field">
+           <label for="">First name</label>
+            <input type="text" placeholder="Enter First name" id="name">
+        </div>
+       <div class="input_field">
+            <label for="">Last name</label>
+           <input type="text" placeholder="Enter Last name" id="lname">
+       </div>
+        <div class="input_field">
+            <label for="">Phone number</label>
+            <input type="text" placeholder="Enter Phone number" id="phone">
+        </div>
+        <div class="input_field">
+           <label for="">Email</label>
+            <input type="text" placeholder="Enter Email" id="email">
+        </div>
+       <div class="input_field">
+           <label for="">Password</label>
+            <input type="text" placeholder="Enter Password" id="pass">
+        </div>
+       <div class="input_field">
+           <label for="">Confirm password</label>
+            <input type="text" placeholder="Confirm password" id="cpass">
+        </div>
+        <p>If already a member? <a href="emplogin.html">Please login.</a></p>
+        <div class="btn">
+            <input type="submit">
+        </div>
+      </form>
+    </div>
+     <script src="../js/empreg.js"></script>
+  </section>
+</main>
 
-
+<!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
