--- a/root/pages/staffing.html
+++ b/root/pages/staffing.html
@@ -25,7 +25,7 @@
           <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Services
             </a>
@@ -39,13 +39,14 @@
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="jobseeker.html" class="nav-link">Job seeker</a>
+            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Job Seeker
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="jobseekerreg.html">Register</a>
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>
+            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -58,14 +59,28 @@
           </li>
         </ul>
       <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employee login
+          <button class="btn menu-right-btn border mx-4" type="submit">Employer login
             </button>
        </form>
       </div>
      </nav>
    </header>
   <main>
-    <div class="container-fluid p-0 background">
+    <div class="container-fluid p-0">
+      <div class="site-content">
+        <div class="d-flex justify-content-start">
+          <div class="d-flex flex-column">
+            <h1 class="site-title text-white">IT staffing and consulting services.</h1>
+          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
+            <p class="site-desc">Solutions designed to solve short term and long term IT staffing challenges.</p>
+          </div>
+
+        </div>
+
+      </div>
+   </div>
+
+    <!--<div class="container-fluid p-0 background">
       <div class="site-content transbox">
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column">
@@ -75,7 +90,47 @@
         </div>
 
       </div>
+   </div>-->
+<!--section-->
+<div class="section-2">
+  <div class="container-fluid">
+    <div class="d-flex justify-content-start">
+      <div class="d-flex flex-column m-4">
+        <h1 class="heading-1">Our IT Staffing Services</h1>
+        <h3>IT staffing augmentation</h3><!--heading-1 para-->
+        <p class="para text-secondary">Resolute can boost your current IT personnel with a wide range of professional skill sets designed to help augment your current IT operations. Our staffing augmentation solutions can provide both short-term and long-term assistance to meet your needs.Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
+          Organizations need individuals with cloud skills to help transform their business.
+           Our content is built by experts at fifo and updated regularly to keep pace with fifo updates, so you
+           can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
+               Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
+              Our content is built by experts at AWS and updated regularly to keep pace with updates, so you
+              can be sure you’re learning the latest and keeping your cloud skills fresh
+            you be more effective and do more in the cloud.</p>
+           <h3>Our IT Staffing services include:</h3>
+           <p class="para text-secondary"><strong>Project managers:</strong> Fully certified experts who can help manage your projects and ensure on time delivery.
+              When you need personnel you can trust to drive your project to completion, our project managers are ready to provide the leadership to get the
+               job done.Are you ready to make a career change in a rapidly growing industry? We are always looking
+              for top talent to join the fifo team! New opportunities emerge each day with our IT Professional Services
+              and IT Solutions Division,Whether you have a collection of existing applications or on the lookout
+               to implement your first.</p>
+            <p class="para text-secondary"><strong>Business operations personnel:</strong> Whether it's operational level IT management you're looking for, or IT personnel to support an existing team, we have the personnel who can support your operations to the fullest including business analysts, systems analysts, and developers
+                  and IT Solutions Division,Whether you have a collection of existing applications or on the lookout
+                   to implement your first.</p>
+            <h3>IT Recruiting</h3>
+            <p class="para text-secondary">We have extensive expertise filling roles across several IT specialties, and we use our own experience in IT to vet any candidates we send your way. We can help you find the right IT professional for your business quickly, without taking up your team’s time.</p>
+
+
+             <h1 class="heading-1">IT consulting services</h1>
+             <p class="para text-secondary">Information technology is always evolving and having access to industry guidance and expert knowledge is crucial to helping you reach your business goals. You need IT consulting services you can trust to ensure your technology base is as efficient and effective as possible.</h3>
+              <h3>IT management consultancy</h3>
+             <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
+               Organizations need individuals with cloud skills to help transform their business.</p>
+             <h3>Business operations</h3>
+             <p class="para text-secondary">We will provide job, training  all terms and conditions of consultant without regard to their race, color, religion, national origin, gender identity, age, protected veteran status, disability, or other protected categories under the applicable law.</p>
+       </div>
+     </div>
    </div>
+ </div>
 <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
