--- a/root/pages/training.html
+++ b/root/pages/training.html
@@ -25,8 +25,8 @@
           <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item active dropdown">
+            <a class="nav-link active dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Services
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,13 +39,14 @@
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="jobseeker.html" class="nav-link">Job seeker</a>
+            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Job Seeker
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="jobseekerreg.html">Register</a>
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>
+            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
