--- a/root/pages/traininglogin.html
+++ b/root/pages/traininglogin.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse"></div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item dropdown">
@@ -39,13 +39,14 @@
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="jobseeker.html" class="nav-link">Job seeker</a>
+            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Job Seeker
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="jobseekerreg.html">Register</a>
               <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>
+            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -58,15 +59,51 @@
           </li>
         </ul>
       <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employee login
+          <button class="btn menu-right-btn border mx-4" type="submit">Employer login
             </button>
        </form>
       </div>
      </nav>
    </header>
   <main>
+    <section>
+      <div class="wrapper">
+        <div class="form">
+          <div class="title">
+            Login for Training
+          </div>
+
+          <form method="post" action="successpage.html" onsubmit="return validation();">
+            <div class="input_wrap">
+              <label for="input_text">Username</label>
+              <div class="input_field">
+                <input type="text" autocomplete="off" class="input" id="input_text">
+              </div>
+            </div>
+            <div class="input_wrap">
+              <label for="input_password">Password</label>
+              <div class="input_field">
+                <input type="password" autocomplete="off" class="input" id="input_password">
+              </div>
+            </div>
+            <div class="input_wrap">
+              <span class="error_msg">Incorrect username or password. Please try again</span>
+              <input type="submit" id="login_btn" class="btn disabled" value="Login" disabled="true">
+            </div>
+            <div class="form-group form-check">
+                  <a href="">Forgot Password?</a>
+                  <h2>Don't have an account?<a href="trainingreg.html">Register Now</a></h2>
+             </div>
+          </form>
+        </div>
+      </div>
+
+      <script src="../js/traininglogin.js"></script>
+
+    </section>
 
 
+<!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
