--- a/root/pages/careers.html
+++ b/root/pages/careers.html
@@ -20,7 +20,7 @@
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse"></div>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
@@ -40,13 +40,6 @@
           </li>
           <li class="nav-item dropdown">
               <a href="jobseeker.html" class="nav-link">Job seeker</a>
-            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Job Seeker
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="jobseekerreg.html">Register</a>
-              <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>-->
           </li>
           <li class="nav-item active">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -70,10 +63,7 @@
       <div class="site-content transbox">
         <div class="d-flex justify-content-left">
           <div class="d-flex flex-column">
-            <!--<h1 class="site-title text-success">Our Services</h1>
-          <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>
-            <p class="site-desc">The speed of change is throwing traditional business methods into question and disrupting the relevance of entire industries.</p>-->
-          </div>
+            </div>
 
         </div>
 
