--- a/root/pages/aboutus.html
+++ b/root/pages/aboutus.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo aboutuspage</title>
-      <link rel="icon" href="../Favicon/favicon.ico">
-      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" href="../Favicon/favicon.ico">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/aboutus.css">
@@ -15,12 +15,11 @@
    <header>
      <nav class="navbar fixed-top navbar-expand-lg navbar-light">
       <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-    <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse"></div>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
              <a href="index.html" class="nav-link">Home</a>
@@ -33,20 +32,12 @@
               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
               <a class="dropdown-item dropright" href="training.html">Training</a>
             </div>
-
           </li>
           <li class="nav-item">
              <a href="clients.html" class="nav-link">Clients</a>
           </li>
           <li class="nav-item dropdown">
               <a href="jobseeker.html" class="nav-link">Job seeker</a>
-            <!--<a class="nav-link dropdown-toggle" href="jobseeker.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Job Seeker
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="jobseekerreg.html">Register</a>
-              <a class="dropdown-item dropright" href="jobseekerlogin.html">Login</a>
-            </div>-->
           </li>
           <li class="nav-item">
              <a href="careers.html" class="nav-link">Carrers</a>
@@ -71,19 +62,16 @@
         <div class="d-flex justify-content-start">
           <div class="d-flex flex-column">
             <h1 class="site-title">About Us</h1>
-          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
           </div>
-
         </div>
-
-      </div>
+       </div>
    </div>
   <!--section1-->
   <div class="section-1">
     <div class="container-fluid">
       <div class="d-flex justify-content-start">
         <div class="d-flex flex-column m-4">
-          <h1 class="heading-1 text-danger">Company Overview</h1><!--heading-1 para-->
+          <h1 class="heading-1 text-danger">Company Overview</h1>
           <p class="para text-secondary">Organizations need individuals with cloud skills to help transform their business.
              AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
              Our content is built by experts at AWS and updated regularly to keep pace with AWS updates, so you
@@ -105,19 +93,16 @@
               <p class="para text-secondary"><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
               <p class="para text-secondary"><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-         </div>
-
-       </div>
+          </div>
+        </div>
      </div>
    </div>
-   <!--section-->
+
 
    <!--section2-->
     <div class="section2 bg-light">
       <div class="container-fluid">
-
-         <div class="row founder">
+        <div class="row founder">
            <div class="col-sm-7">
              <h1 class="text-center heading">Meet our Founder, President & CEO</h1>
              <p>Bansal holds a master’s degree in Business Administration, an undergraduate degree in Business & Accounting
@@ -145,53 +130,21 @@
       <h1 class="teamh1">Our team</h1>
       <div class="row">
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
-          <h2>kumar</h2>
+           <h2>kumar</h2>
           <h3>Founder/CEO</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Santhosh</h2>
           <h3>Marketing head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Akshay</h2>
           <h3>Sales head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Aryav</h2>
           <h3>founder/ceo</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
@@ -199,56 +152,23 @@
       </div>
     </div>
     <div class="container">
-
       <div class="row">
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Sandeep</h2>
           <h3>Founder/CEO</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
         </div>
         <div class="col-md-3 profile text-center">
-           <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Varun</h2>
           <h3>Marketing head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Rithik</h2>
           <h3>Sales head</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
         </div>
         <div class="col-md-3 profile text-center">
-          <!--<div class="img-box">
-            <img src="../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="" class="img-responsive">
-              <ul>
-                 <a href="#"><li><i class="fa fa-facebook"></i></li></a>
-                 <a href="#"><li><i class="fa fa-twitter"></i></li></a>
-                 <a href="#"><li><i class="fa fa-Linkedin"></i></li></a>
-              </ul>
-          </div>-->
           <h2>Ajith</h2>
           <h3>founder/ceo</h3>
           <p>provided hardware, software, architecture consulting, CRM configuration and consulting, and database implementation.</p>
@@ -256,14 +176,12 @@
       </div>
     </div>
   </section>
-<!--section-->
+<!--section 4-->
 <div class="bg-light container-fluid">
   <div class="partners">
      <h2 class="text-center text-dark">Our valued partners</h2>
   </div>
-
   <div class="row">
-
   <div class="awslogo col">
    <div class="icon">
      <i class="fab fa-aws"><span id="span1">partner network</span> <span id="span2"><br>Advanced</span><span id="span3"><br>Consulting</span><span id="span4"><br>Partner</span></i>
@@ -274,7 +192,6 @@
      <i class='fab fa-CHEF'>CHEF</i>
      <i class="fab fa-redhat"><span id="red">Red Hat</span></i>
      <i class="fab fa-atlassian">ATLASSIAN</i>
-
    </div>
  </div>
   <!--footer-->
