--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -9,6 +9,9 @@
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+
     <<link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
@@ -65,78 +68,45 @@
      </nav>
    </header>
    <main>
-    <!-- slider section -->
-      <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
-   			  <ol class="carousel-indicators">
-   			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-   			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-   			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-   			  </ol>
-   			  <div class="carousel-inner">
-   			    <div class="carousel-item active">
-   			    	<div class="info">
-   			      		<h1>Welcome to Fifosolutions</h1>
-   			      		<p>Here you can turn your passion into your career.</p>
-   			      	</div>
-   			    </div>
-   			    <div class="carousel-item">
-   			    	<div class="info">
-   			      		<h1>100% Job guarantee.</h1>
-   			      		<p>Through us we will provide you the best jobs.</p>
-   			      	</div>
-   			    </div>
-   			    <div class="carousel-item">
-   			    	<div class="info">
-   			      		<h1>Here you can get training.</h1>
-   			      		<p>If you are new to technology, we will provide training.</p>
-   			      	</div>
-   			    </div>
-   			  </div>
-   			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-   			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-   			    <span class="sr-only">Previous</span>
-   			  </a>
-   			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-   			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-   			    <span class="sr-only">Next</span>
-   			  </a>
-   			</div>
-   		</div>
-   	</div>
-    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
--->
-    <div class="bd-example">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="/placeholder/pictures/image.svg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>First slide label</h3>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/placeholder/pictures/image.svg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Second slide label</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
+
+  	<div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators" data-interval="4000">
+  		<ol class="carousel-indicators">
+  			<li class="active" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
+  			<li data-slide-to="1" data-target="#carouselExampleIndicators"></li>
+  			<li data-slide-to="2" data-target="#carouselExampleIndicators"></li>
+  		</ol>
+  		<div class="carousel-inner">
+  			<div class="carousel-item active">
+  				<img alt="First slide" class="d-block w-100" src="../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg">
+  				<div class="carousel-caption d-none d-md-block">
+  					<h5>Welcome to Fifosolutions</h5>
+  					<p>Here you can turn your passion into your career..</p>
+  				</div>
+  			</div>
+  			<div class="carousel-item">
+  				<img alt="Second slide" class="d-block w-100" src="../images/pexels-oleg-magni-2058130.jpg">
+  				<div class="carousel-caption d-none d-md-block">
+  					<h5>100% Job guarantee.</h5>
+  					<p>Through us we will provide you the best jobs.</p>
+  				</div>
+  			</div>
+  			<div class="carousel-item">
+  				<img alt="Third slide" class="d-block w-100" src="../images/pexels-marily-torres-776615.jpg">
+  				<div class="carousel-caption d-none d-md-block">
+  					<h5>Here you can get training.</h5>
+  					<p>If you are new to technology, we will provide training.</p>
+  				</div>
+  			</div>
+  		</div><a class="carousel-control-prev" data-slide="prev" href="#carouselExampleIndicators" role="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" data-slide="next" href="#carouselExampleIndicators" role="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+  	</div>
+  	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+  	</script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+  	</script>
+  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+  	</script>
+
+
 
   <!--section1-->
   <div class="section-1">
@@ -180,7 +150,7 @@
   <!--section2-->
     <div class="section-2">
       <div class="container-fluid">
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-start">
           <div class="d-flex flex-column m-4">
             <h1 class="s2 heading-1 text-success">We will provide you the best training</h1>
             <p class="s2 para text-secondary"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
@@ -294,41 +264,140 @@
         </div>
       </div>
   <!--footer-->
-      <footer class="footer-distributed">
-          <div class="footer-left">
-            <h2>Address</h2>
-            <address class="address">
-             <span>21 Revolution Street<br>
-             vizag, Andhra pradesh,<br>
-             India<br>
-             +1 667 123456<br>
-              P O Box: 117537<br></span>
-             </address>
-           </div>
-          <div class="footer-center">
-           <div>
-             <h2>Contact Us</h2>
-              <p class="foot1">Telephone:+971 43206111</p><br>
-              <p class="foot1">WhatsApp: +971 552096715</p><br>
-              <p class="foot1">Email: info@fifosolutions.com</p>
-              <div class="footer-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
+    <div class="footer-wrapper">
+    <div class="top-img"></div>
+    <div class="container-fluid">
+
+
+      <div class="footer-mid-part">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-one">
+              <div class="footer-heading"><h2>Contact Us</h2></div>
+               <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-map-marker"></i></div>
+              <div class="footer-contact-text">
+                <p>Address:21 Revolution Street<br>
+                vizag, Andhra pradesh
+                India</p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-phone"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="tel:+012-3456-789">+012-3456-789</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-fax"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="fax:+012-3456-789">+012-3456-789</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-envelope"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="mailto:people@fifosolutions.com">people@fifosolutions.com</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-globe"></i></div>
+              <div class="footer-contact-text">
+                 <p><a href="http://www.fifosolutions.com">http://www.fifosolutions.com</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+
+            </div>
+
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-two">
+              <div class="footer-heading"><h2>Quick Link</h2></div>
+              <div class="footer-link">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                   <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Services</a></li>
+
+                        <li><a href="#">Training</a></li>
+                         <li><a href="#">Contact Us</a></li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-two">
+              <div class="footer-heading"><h2>Fifosolutions</h2></div>
+               <div class="footer-link">
+                 <p> Our journey strated in the year 2019 through our parent
+                 entity providing management consultancy services. The need
+                for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
+                 established.</p>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-three">
+              <div class="footer-heading"><h2>Get in touch</h2></div>
+               <div class="footer-form">
+                 <form method="post" action="#">
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Name">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Email">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Phone Number">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="submit" class="footer-form-submit-style" value="SUBMIT" ">
+                   </div>
+                 </form>
                </div>
-           </div>
-         </div>
-        <div class="footer-right">
-          <p class="footer-company-about"> <span>Fifo Solutions</span>
-             Our journey strated in the year 2019 through our parent
-            entity providing management consultancy services. The need
-           for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
-            established.</p>
-         </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg">
+      <div class="footer-social-icons">
+        <ul>
+          <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+
+          <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+          </ul>
+      </div>
+   <div class="footer-bottom">
+     <div class="row">
+       <div class="col-lg-12 col-md-12 col-sm-12">
+         <p>Copyright 2018 Learning Tutorial Point All Rights Reserved</p>
+       </div>
+     </div>
+   </div>
+ </div>
+
+    </div>
+  </div>
+
+
+
+
   </body>
 </html>
